Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-17 (SVN):
    * gamecode, eidolon.hc: Fixed eidolon_guarding() and eidolon_run() to
      check whether self.oldenemy (player) is still alive.

2011-06-17 (SVN):
    * gamecode, imp.hc (summoned_imp_die): Clear the FL_ALIVE flag for the
      gib case, too.
    * gamecode, imp.hc (summoned_imp_die): Clear the FL_ALIVE flag before
      removing, otherwise eidolon might get confused.

2011-06-17 (SVN):
    * gamecode, waypoint.hc (ResetWaypoints): Play with self.controller's
      fields only if self.controller is not 0.

2011-06-17 (SVN):
    * gamecode, monsters.hc (walkmonster_start_go): Added missing return
      statement after removing a stuck summoned monster.

2011-06-17 (SVN):
    * gamecode, h2/imp.hc: Remove the flapping sound if a summoned imp is
      gibbed. (fix was in other hcode trees, only original h2 was missing
      it.)

2011-06-15 (SVN):
    * libs/timidity/timidity.c (read_config_file): Don't underflow array
      when parsing timidity config file. (From SDL_sound mercurial repo.)

2011-06-15 (SVN):
    * host_cmd.c (Host_Quit_f): Shorten the no-confirm quit condition:
      (cls.state!=ca_dedicated && cls.state!=ca_disconnected) condenses
      to cls.state==ca_connected.

2011-06-15 (SVN):
    * libs/timidity/timidity.c (read_config_file): honor the return code
      from recursive read_config_file() call for the "source" directive.
      from timidity-0.2i bugfix patch found at
      http://www.onicos.com/staff/iz/timidity/
    * libs/timidity/instrum.c (load_instrument): Fix shadowing warnings
      due to reuse of variables i and tmp.
    * libs/timidity/instrum_dls.c: Fix gcc's shadowing warnings due to
      the stupid name clash with index().
    * libs/timidity/timidity.c (read_config_file): close the file before
      returning in error cases.

2011-06-15 (SVN):
    * host_cmd.c (Host_Quit_f): Quit without confirmation when issuing